@@ -13,6 +13,7 @@
                       [limit]="config.limit"
                       [sorters]="config.sorters"
                       [sortType]="config.sortType"
+                      [stateId]="config.stateId"
                       [valueType]="config.valueType">
   </mat-form-datatable>
   <mat-error *ngIf="formGroup.invalid">
