@@ -13,6 +13,7 @@
                [limit]="limit"
                [sorters]="sorters"
                [sortType]="sortType"
+               [stateId]="stateId"
                (cellDataChangedEvent)="onCellDataChanged($event)">
   <omv-datatable-actions [actions]="actions"
                          [selection]="selection"
